padding right to icons in #find-plan .card

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                      <span>
                                          <i class="fa-solid fa-user"></i> 
                                      </span>
-                                     <span> 1 utente</span> 
+                                     <span>1 utente</span> 
                                  </div>
                              </li>
                              <li>
@@ -116,7 +116,7 @@
                                      <span>
                                          <i class="fa-solid fa-folder"></i> 
                                      </span>
-                                     <span> 5 TB di spazio di archiviazione sicuro</span> 
+                                     <span>5 TB di spazio di archiviazione sicuro</span> 
                                  </div>
                              </li>
                              <li>
@@ -124,14 +124,14 @@
                                      <span>
                                          <i class="fa-solid fa-share-nodes"></i> 
                                      </span>
-                                     <span> Funzioni di produttività premium e condivisione file semplice e sicura</span> 
+                                     <span>Funzioni di produttività premium e condivisione file semplice e sicura</span> 
                                  </div>
                              </li>
                              <li class="m-left">
                                  <a href="" class="btn">Prova gratis per 30 giorni</a>
                              </li>
                              <li class="m-left">
-                                 <span>oppure </span><a href="">Acquista ora</a>
+                                 <span>oppure </span><a href="">acquista ora</a>
                              </li>
                              <li class="m-left">
                                  <h5>Punti salienti del piano</h5>
@@ -141,7 +141,7 @@
                                      <span>
                                          <i class="fa-solid fa-check"></i>
                                      </span>
-                                     <span> Invia file fino a 100 GB con Dropbox Transfert</span> 
+                                     <span>Invia file fino a 100 GB con Dropbox Transfert</span> 
                                  </div>
                              </li>
                              <li>
@@ -149,7 +149,7 @@
                                      <span>
                                          <i class="fa-solid fa-check"></i>
                                      </span>
-                                     <span> Cartelle offline su dispositivi mobili</span> 
+                                     <span>Cartelle offline su dispositivi mobili</span> 
                                  </div>
                              </li>
                          </ul>
@@ -171,7 +171,7 @@
                                      <span>
                                          <i class="fa-solid fa-user"></i> 
                                      </span>
-                                     <span> 3 o più utenti</span> 
+                                     <span>3 o più utenti</span> 
                                  </div>
                              </li>
                              <li>
@@ -179,7 +179,7 @@
                                      <span>
                                          <i class="fa-solid fa-folder"></i> 
                                      </span>
-                                     <span> Tutto lo spazio di cui il tuo team ha bisogno</span> 
+                                     <span>Tutto lo spazio di cui il tuo team ha bisogno</span> 
                                  </div>
                              </li>
                              <li>
@@ -187,14 +187,14 @@
                                      <span>
                                          <i class="fa-solid fa-share-nodes"></i> 
                                      </span>
-                                     <span> Sofisticate funzioni di controllo, per tenere al sicuro tutti i file del tuo team</span> 
+                                     <span>Sofisticate funzioni di controllo, per tenere al sicuro tutti i file del tuo team</span> 
                                  </div>
                              </li>
                              <li>
                                  <a href="" class="btn">Prova gratis per 30 giorni</a>
                              </li>
                              <li>
-                                 <span>oppure </span><a href="">Acquista ora</a>
+                                 <span>oppure </span><a href="">acquista ora</a>
                              </li>
                              <li>
                                  <h5>Punti salienti del piano</h5>
@@ -204,7 +204,7 @@
                                      <span>
                                          <i class="fa-solid fa-check"></i>
                                      </span>
-                                     <span> Nessun limite di spazio per i file</span> 
+                                     <span>Nessun limite di spazio per i file</span> 
                                  </div>
                              </li>
                              <li>
@@ -212,7 +212,7 @@
                                      <span>
                                          <i class="fa-solid fa-check"></i>
                                      </span>
-                                     <span> Cartelle offline su dispositivi mobili</span> 
+                                     <span>Cartelle offline su dispositivi mobili</span> 
                                  </div>
                              </li>
                              <li>
@@ -220,7 +220,7 @@
                                      <span>
                                          <i class="fa-solid fa-check"></i>
                                      </span>
-                                     <span> Risparmio del 50% rispetto alle iscrizioni singole</span> 
+                                     <span>Risparmio del 50% rispetto alle iscrizioni singole</span> 
                                  </div>
                              </li>
                              <li>
@@ -228,7 +228,7 @@
                                      <span>
                                          <i class="fa-solid fa-check"></i>
                                      </span>
-                                     <span> Possibilità di inserire nuovi elementi del team</span> 
+                                     <span>Possibilità di inserire nuovi elementi del team</span> 
                                  </div>
                              </li>
                              <li>
@@ -236,7 +236,7 @@
                                      <span>
                                          <i class="fa-solid fa-check"></i>
                                      </span>
-                                     <span> Gestione dei permessi in base ai ruoli</span> 
+                                     <span>Gestione dei permessi in base ai ruoli</span> 
                                  </div>
                              </li>
                          </ul>
@@ -245,7 +245,7 @@
                  <!-- card 3 -->
                  <div class="card border-grey">
                      <div class="bottom-grey">
-                         <i class="fa-solid fa-building"></i> Azienda
+                         <i class="fa-solid fa-building"></i>Azienda
                      </div>
                      <div>
                          <h3>Enterprise</h3>
@@ -257,7 +257,7 @@
                                      <span>
                                          <i class="fa-solid fa-user"></i> 
                                      </span>
-                                     <span> 10 o più utenti</span> 
+                                     <span>10 o più utenti</span> 
                                  </div>
                              </li>
                              <li>
@@ -265,7 +265,7 @@
                                      <span>
                                          <i class="fa-solid fa-folder"></i> 
                                      </span>
-                                     <span> Soluzioni personalizzabili per la tua azienda</span> 
+                                     <span>Soluzioni personalizzabili per la tua azienda</span> 
                                  </div>
                              </li>
                              <li>
@@ -273,14 +273,14 @@
                                      <span>
                                          <i class="fa-solid fa-share-nodes"></i> 
                                      </span>
-                                     <span> Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span> 
+                                     <span>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</span> 
                                  </div>
                              </li>
                              <li>
                                  <a href="" class="btn">Prova gratis per 30 giorni</a>
                              </li>
                              <li>
-                                 <span>oppure </span><a href="">Acquista ora</a>
+                                 <span>oppure </span><a href="">acquista ora</a>
                              </li>
                              <li>
                                  <h5>Punti salienti del piano</h5>
@@ -290,7 +290,7 @@
                                      <span>
                                          <i class="fa-solid fa-check"></i>
                                      </span>
-                                     <span> Cartelle offline su dispositivi mobili</span> 
+                                     <span>Cartelle offline su dispositivi mobili</span> 
                                  </div>
                              </li>
                              <li>
@@ -298,7 +298,7 @@
                                      <span>
                                          <i class="fa-solid fa-check"></i>
                                      </span>
-                                     <span> Servizio assistenza 24/h</span> 
+                                     <span>Servizio assistenza 24/h</span> 
                                  </div>
                              </li>
                              <li>
@@ -306,7 +306,7 @@
                                      <span>
                                          <i class="fa-solid fa-check"></i>
                                      </span>
-                                     <span> Possibilità di totale personalizzazione</span> 
+                                     <span>Possibilità di totale personalizzazione</span> 
                                  </div>
                              </li>
                          </ul>
@@ -333,6 +333,7 @@
  
         </section>
 
+        <!-- find partner section -->
         <section class="container-small" id="find-partner">
             <div class="flex jc-between ai-start">
                 <div class="col-bigger">
@@ -346,6 +347,7 @@
             </div>
         </section>
 
+        <!-- perform tasks section -->
         <section class="container-small" id="perform-tasks">
             <h2>Esegui più operazioni con DropBob Business</h2>
             <div class="flex jc-between ai-center wrap">
@@ -382,11 +384,13 @@
             </div>
         </section>
 
+        <!-- our customers section -->
         <section class="container-small" id="our-customers">
             <h2>Pin di 500.000 team utilizzano Dronbox Business</h2>
             <a href="">Scopri di più sui nostri clienti</a>
         </section>
 
+        <!-- institutions section -->
         <section class="flex jc-between ai-center" id="institutions">
             <div class="square-big flex jc-between ai-center wrap">
                 <div id="designit" class="square-small flex jc-center ai-center">
