add basic content to footer

--- a/index.html
+++ b/index.html
@@ -478,8 +478,47 @@
     <!-- FOOTER -->
 
     <footer>
-        <section class="container-big">
-
+        <section class="container-big flex jc-between ai-center">
+            <ul class="white-bottom">
+                <li>Dropbox</li>
+                <li>Applicazione desktop</li>
+                <li>Perché Dropbox</li>
+                <li>Piani</li>
+                <li>Sicurezza</li>
+                <li>funzioni</li>
+            </ul>
+            <ul>
+                <li>Prodotti</li>
+                <li>Applicazione desktop</li>
+                <li>Perché Dropbox</li>
+                <li>Piani</li>
+                <li>Sicurezza</li>
+                <li>funzioni</li>
+            </ul>
+            <ul>
+                <li>Azienda</li>
+                <li>Applicazione desktop</li>
+                <li>Perché Dropbox</li>
+                <li>Piani</li>
+                <li>Sicurezza</li>
+                <li>funzioni</li>
+            </ul>
+            <ul>
+                <li>Supporto</li>
+                <li>Applicazione desktop</li>
+                <li>Perché Dropbox</li>
+                <li>Piani</li>
+                <li>Sicurezza</li>
+                <li>funzioni</li>
+            </ul>
+            <ul>
+                <li>Community</li>
+                <li>Applicazione desktop</li>
+                <li>Perché Dropbox</li>
+                <li>Piani</li>
+                <li>Sicurezza</li>
+                <li>funzioni</li>
+            </ul>
         </section>
     </footer>
     
