change class name from .bottom-grey to .card-top

--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
  
              <!-- CARDS in FLEXED CONTAINER -->
              <div class="flex jc-between ai-stretch">
+
                  <!-- card 1 -->
                  <div class="card border-grey">
-                     <div class="bottom-grey">
-                         <i class="fa-solid fa-user"></i> Singolo
+                     <div class="card-top">
+                         <i class="fa-solid fa-user"></i>Singolo
                      </div>
                      <div>
                          <h3>Professional</h3>
@@ -158,8 +159,8 @@
                  
                   <!-- card 2 -->
                  <div class="card border-grey">
-                     <div class="bottom-grey">
-                         <i class="fa-solid fa-people-group"></i> Team
+                     <div class="card-top">
+                         <i class="fa-solid fa-people-group"></i>Team
                      </div>
                      <div>
                          <h3>Advanced</h3>
@@ -244,7 +245,7 @@
                  </div>
                  <!-- card 3 -->
                  <div class="card border-grey">
-                     <div class="bottom-grey">
+                     <div class="card-top">
                          <i class="fa-solid fa-building"></i>Azienda
                      </div>
                      <div>
@@ -316,7 +317,7 @@
          </div>
          <!-- enterprise solution (card 4) -->
          <div class="border-grey" id="enterprise">
-             <div class="bottom-grey">
+             <div class="card-top">
                  <i class="fa-solid fa-building"></i> Team
              </div>
              <div class="flex jc-between ai-start">
