add & change paddings in footer

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
         <section class="container-big">
 
             <div class="flex jc-between ai-center">
-                <ul class="white-bottom">
+                <ul class="line-in-footer">
                     <li>Dropbox</li>
                     <li>Applicazione desktop</li>
                     <li>Perché Dropbox</li>
