changed #faq section

--- a/index.html
+++ b/index.html
@@ -443,6 +443,29 @@
             <h2>Domande frequenti</h2>
 
             <hr>
+
+            <div class="flex jc-between ai-center">
+                <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+
+            <hr>
+
+            <div class="flex jc-between ai-center">
+                <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+
+            <hr>
+
+            <div class="flex jc-between ai-center">
+                <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                <i class="fa-solid fa-chevron-down"></i>
+            </div>
+
+            <hr>
+
+            <!-- <hr>
             <details>
                 <summary>
                     Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
@@ -474,7 +497,7 @@
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem rerum adipisci quis culpa cumque velit quaerat non officiis explicabo earum.
                 </p>
             </details>
-            <hr>
+            <hr> -->
 
         </section>
 
