arrow down leads to #find-plan

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <a class="btn" href="">Inizia la prova gratuita</a>
                         <span>Annulla in qualsiasi momento</span>
-                        <a href="http://"><i class="fa-solid fa-arrow-down"></i></a>
+                        <a href="#find-plan"><i class="fa-solid fa-arrow-down"></i></a>
                     </div>
                     <img class="col-bigger" src="./images/jumbo.png" alt="header jumbo image">
                 </div>
