started bonus work on #faq section

--- a/index.html
+++ b/index.html
@@ -447,21 +447,33 @@
             <div class="flex jc-between ai-center">
                 <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
                 <i class="fa-solid fa-chevron-down"></i>
+                <i class="fa-solid fa-chevron-up"></i>
             </div>
+            <p class="answer-1">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur fugiat explicabo esse fuga iure illum! Fugiat, corrupti maxime? Tenetur, est!
+            </p>
 
             <hr>
 
             <div class="flex jc-between ai-center">
                 <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
                 <i class="fa-solid fa-chevron-down"></i>
+                <i class="fa-solid fa-chevron-up"></i>
             </div>
+            <p class="answer-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur fugiat explicabo esse fuga iure illum! Fugiat, corrupti maxime? Tenetur, est!
+            </p>
 
             <hr>
 
             <div class="flex jc-between ai-center">
                 <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
                 <i class="fa-solid fa-chevron-down"></i>
+                <i class="fa-solid fa-chevron-up"></i>
             </div>
+            <p class="answer-3">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur fugiat explicabo esse fuga iure illum! Fugiat, corrupti maxime? Tenetur, est!
+            </p>
 
             <hr>
 
