--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@
             <div class="square-big" id="designit-grey">
                 <img src="./images/designit.svg" alt="designit logo">
                 <div class="text-square-big">
+                    <div class="line">_________________</div>
                     <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari ed uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quaanto Dropbox Paper".</p>
                     <span>Morten Thomsen, Global IT Lead</span>
                 </div>
@@ -447,33 +448,33 @@
             <div class="flex jc-between ai-center">
                 <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
                 <i class="fa-solid fa-chevron-down"></i>
-                <i class="fa-solid fa-chevron-up"></i>
+                <!-- <i class="fa-solid fa-chevron-up"></i> -->
             </div>
-            <p class="answer-1">
+            <!-- <p class="answer-1">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur fugiat explicabo esse fuga iure illum! Fugiat, corrupti maxime? Tenetur, est!
-            </p>
+            </p> -->
 
             <hr>
 
             <div class="flex jc-between ai-center">
                 <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
                 <i class="fa-solid fa-chevron-down"></i>
-                <i class="fa-solid fa-chevron-up"></i>
+                <!-- <i class="fa-solid fa-chevron-up"></i> -->
             </div>
-            <p class="answer-2">
+            <!-- <p class="answer-2">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur fugiat explicabo esse fuga iure illum! Fugiat, corrupti maxime? Tenetur, est!
-            </p>
+            </p> -->
 
             <hr>
 
             <div class="flex jc-between ai-center">
                 <p>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
                 <i class="fa-solid fa-chevron-down"></i>
-                <i class="fa-solid fa-chevron-up"></i>
+                <!-- <i class="fa-solid fa-chevron-up"></i> -->
             </div>
-            <p class="answer-3">
+            <!-- <p class="answer-3">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur fugiat explicabo esse fuga iure illum! Fugiat, corrupti maxime? Tenetur, est!
-            </p>
+            </p> -->
 
             <hr>
 
