made some general refactoring

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <!-- HEADER -->
 
     <header>
+
         <!-- nav -->
         <nav class="flex jc-between ai-center">
+
             <!-- left ul in nav -->
             <div class="flex jc-center ai-center">
                 <img class="logo" src="./images/logo-small.png" alt="logo Dropbox">
@@ -54,6 +56,7 @@
                 </li>
             </ul>
         </nav>
+
         <!-- main part of header section: text + image -->
         <section class="header-bg" id="main-header">
             <div class="container-big">
@@ -76,9 +79,9 @@
     <!-- MAIN -->
 
     <main>
-
+             
+        <!-- find a suitable Dropbox plan -->
         <section class="container-small" id="find-plan">
-             <!-- find a suitable Dropbox plan -->
 
              <h2>Trova il piano business che fa per te</h2>
 
@@ -86,7 +89,7 @@
  
              <form action="">
                  <label for="">Fatturazione mensile</label>
-                 <input type="radio" checked>
+                 <input type="radio" checked="checked">
                  <label for="">Fatturazione annuale</label>
                  <input type="radio">
              </form>
@@ -243,6 +246,7 @@
                          </ul>
                      </div> 
                  </div>
+
                  <!-- card 3 -->
                  <div class="card border-grey">
                      <div class="card-top">
@@ -313,25 +317,26 @@
                          </ul>
                  </div>
              </div>
- 
          </div>
-         <!-- enterprise solution (card 4) -->
-         <div class="border-grey" id="enterprise">
-             <div class="card-top">
-                 <i class="fa-solid fa-building"></i> Team
-             </div>
-             <div class="flex jc-between ai-start">
-                 <div class="col-bigger">
-                     <h3>Enterprise</h3>
-                     <h5>Contatta l'ufficio vendite per i prezzi</h5>
-                     <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
-                 </div>
-                 <div class="col-smaller">
-                     <a href="" class="btn">Contatta l'ufficio vendite</a>
-                 </div>
-             </div>
-         </div>
- 
+        </section>
+
+        <!-- enterprise solution (card 4) -->
+        <section class="container-small">
+            <div class="border-grey" id="enterprise">
+                <div class="card-top">
+                    <i class="fa-solid fa-building"></i> Team
+                </div>
+                <div class="flex jc-between ai-start">
+                    <div class="col-bigger">
+                        <h3>Enterprise</h3>
+                        <h5>Contatta l'ufficio vendite per i prezzi</h5>
+                        <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
+                    </div>
+                    <div class="col-smaller">
+                        <a href="" class="btn">Contatta l'ufficio vendite</a>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- find partner section -->
@@ -410,7 +415,7 @@
             <div class="square-big" id="designit-grey">
                 <img src="./images/designit.svg" alt="designit logo">
                 <div class="text-square-big">
-                    <div class="line">_________________</div>
+                    <div class="line">______________</div>
                     <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari ed uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quaanto Dropbox Paper".</p>
                     <span>Morten Thomsen, Global IT Lead</span>
                 </div>
@@ -431,14 +436,13 @@
             </div>
         </section>
 
-        <!-- CALL TO ACTION -->
+        <!-- CALL TO ACTION section -->
         <section class="flex jc-around ai-center" id="cta">
             <h2>Porta Dropbox Business nella tua azienda</h2>
             <a href="" class="btn-light">Inizia la tua prova gratuita</a>
         </section>
 
-        <!-- FAQ -->
-
+        <!-- FAQ section -->
         <section class="container-small" id="faq">
             
             <h2>Domande frequenti</h2>
@@ -483,7 +487,6 @@
     </main>
 
     <!-- FOOTER -->
-
     <footer>
         <section class="container-big">
 
