improve form layout

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
              <!-- button radio to choose how to pay -->
  
              <form action="">
-                 <label for="">Fatturazione mensile</label>
-                 <input type="radio" checked="checked">
-                 <label for="">Fatturazione annuale</label>
-                 <input type="radio">
+                <input type="radio" checked="checked">
+                <label for="">Fatturazione mensile</label>
+                <input type="radio">
+                <label for="">Fatturazione annuale</label>
              </form>
  
              <!-- CARDS in FLEXED CONTAINER -->
@@ -320,7 +320,7 @@
          </div>
         </section>
 
-        <!-- enterprise solution (card 4) -->
+        <!-- enterprise solution section (aka card 4) -->
         <section class="container-small">
             <div class="border-grey" id="enterprise">
                 <div class="card-top">
